[gd_scene load_steps=8 format=3 uid="uid://2e0n444p7ome"]

[ext_resource type="Texture2D" uid="uid://brn1bgtj3tbru" path="res://sprites/traps/Spike_B.png" id="1_kgkvf"]
[ext_resource type="Script" path="res://scenes/traps/spike.gd" id="1_ns3t6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5qxp"]
size = Vector2(32, 14)

[sub_resource type="Animation" id="Animation_4ovpg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ugymc"]
resource_name = "activation"
length = 1.54
step = 0.14
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.14, 0.28, 0.42, 0.56, 0.7, 0.84, 0.98, 1.12, 1.26, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.285714),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"switch"
}]
}

[sub_resource type="Animation" id="Animation_bquap"]
resource_name = "deactivation"
length = 0.7
step = 0.14
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.14, 0.28, 0.42, 0.56),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 3, 2, 1, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.428571),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"switch"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_skic4"]
_data = {
"RESET": SubResource("Animation_4ovpg"),
"activation": SubResource("Animation_ugymc"),
"deactivation": SubResource("Animation_bquap")
}

[node name="Spike" type="Area2D"]
collision_layer = 8
script = ExtResource("1_ns3t6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_y5qxp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kgkvf")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_skic4")
}

[node name="Timers" type="Node" parent="."]

[node name="IdleTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="ActivityTimer" type="Timer" parent="Timers"]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timers/IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="Timers/ActivityTimer" to="." method="_on_activity_timer_timeout"]
